--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,22 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h1>{{title}}</h1>
+
+  <h2>My favorite hero is: {{myHero}}</h2>
+
+  <p>Heroes:</p>
+
+  <ul>
+
+    <li *ngFor="let hero of heroes">
+
+      {{ hero }}
+
+    </li>
+    
+
+  </ul>
+
+  
 </ion-content>
